Fix SonaQube and add plugin spotless